--- a/package.json
+++ b/package.json
@@ -43,6 +43,11 @@
     "@radix-ui/react-tooltip": "^1.1.4",
     "@tabler/icons-react": "^3.34.0",
     "@tanstack/react-query": "^5.56.2",
+    "@tsparticles/engine": "^3.8.1",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.8.1",
+    "@types/gsap": "^3.0.0",
+    "@types/three": "^0.177.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -55,16 +60,21 @@
     "motion": "^12.16.0",
     "next": "^15.3.3",
     "next-themes": "^0.3.0",
+    "nodemon": "^3.1.10",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-resizable-panels": "^2.1.3",
     "react-router-dom": "^6.30.1",
+    "react-tsparticles": "^2.12.2",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.177.0",
+    "tsparticles": "^3.8.1",
+    "tsparticles-engine": "^2.12.0",
     "vaul": "^0.9.3",
     "zod": "^3.23.8"
   },
